Content updated, EN version added

--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -2,39 +2,41 @@ extends ../layout.pug
 
 block vars
 	- 
-		var lang = "en"
+		var ms_lang = "en"
 		var path = "../"
 		var ms_title = "Mediascope Clients Conference 2020"
 		var ms_heading = "Mediascope Clients<br>Conference "
 		var ms_nav_item1 = "About Mediascope"
 		var ms_nav_item2 = "Speakers"
-		var ms_nav_item3 = "Program"
+		var ms_nav_item3 = "Conference Agenda"
 		var ms_nav_item4_url = "/index.html"
 		var ms_nav_item4 = "РУС"
+		var ms_nav_item5 = "Archive"
 		var ms_btn_join = "Регистрация"
 		var ms_btn_manual = "Где и как смотреть трансляцию"
-		var ms_about_title = "О конференции"
-		var ms_about_text = "2020 год для всех особенный. Технологическая трансформация стала одной из стратегически важных составляющих для большинства компаний и бизнесов.</p><p>За этот год мы сделали многое для того, чтобы наши клиенты смогли в будущем строить свой бизнес и принимать решения на основе синтеза огромного опыта Mediascope в медиаисследованиях и лучших технологий в области работы с данными.</p><p>Мы будем рады подробнее рассказать об этом на нашей конференции 1 декабря <nobr>2020 года</nobr>.</p><p>В этом году наше мероприятие состоится в онлайн-формате. Посмотреть трансляцию вы сможете по предварительной регистрации.</p><p>До встречи 1 декабря!"
+		var ms_about_title = "About the conference"
+		var ms_about_text = "2020 has been a special year for everyone. The technological transformation has become a key strategic objective for majority of businesses in media and advertising market.</p><p>During this year we have done a lot to support you - our clients, in addressing the challenges of today and tomorrow.</p><p>We will be happy to share our ideas and vision with you at our annual Clients Conference which will be held online on 1 December 2020.</p><p>We invite you to register for our event and look forward to seeing you online on 1 December!"
 		var broadcast_info = "Трансляция будет проходить одновременно на нескольких площадках."
 		var broadcast_site = "Сайт конференции"
-		var broadcast_title = "Трансляция"
-		var broadcast_player_info = "Дискуссионная панель «Viewability: отрицание, гнев, торг, принятие… Где мы сегодня и что будет завтра?»"
-		var broadcast_player_select0 = "Выбрать плеер"
-		var broadcast_player_select1 = "Плеер 1"
-		var broadcast_player_select2 = "Плеер 2"
+		var broadcast_title = "Broadcast"
+		var broadcast_player_select0 = "Media player"
+		var broadcast_player_select1 = "Media player 1"
+		var broadcast_player_select2 = "Media player 2"
+		var broadcast_review = "Please rate the speakers"
+		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLSdIx30Q5zMmWtQKHZG55eM1FhRRv0VdDPZkAljXSXpirXSd9A/viewform"
 
-		var r_tagiev = "Руслан&nbsp;<br>Тагиев"
-		var r_tagiev_vocation = "генеральный директор&nbsp;<br>Mediascope"
-		var k_achkasova = "Ксения&nbsp;<br>Ачкасова"
-		var k_achkasova_vocation = "исполнительный директор&nbsp;<br>Mediascope"
-		var m_pikuleva = "Марина&nbsp;<br>Пикулева"
-		var m_pikuleva_vocation = "директор по специальным&nbsp;<br>исследованиям Mediascope"
-		var o_starostina = "Олеся&nbsp;<br>Старостина"
-		var o_starostina_vocation = "старший менеджер&nbsp;<br>по специальным исследованиям"
-		var l_gleizer = "Лев&nbsp;<br>Глейзер"
-		var l_gleizer_vocation = "директор по информационным&nbsp;<br>технологиям"
-		var m_zotov = "Михаил&nbsp;<br>Зотов"
-		var m_zotov_vocation = "коммерческий директор&nbsp;<br>Mediascope"
+		var r_tagiev = "Ruslan&nbsp;<br>Tagiev"
+		var r_tagiev_vocation = "CEO"
+		var k_achkasova = "Ksenia&nbsp;<br>Achkasova"
+		var k_achkasova_vocation = "COO"
+		var m_pikuleva = "Marina&nbsp;<br>Pikuleva"
+		var m_pikuleva_vocation = "Custom Media&nbsp;<br>Research Director"
+		var o_starostina = "Olesya&nbsp;<br>Starostina"
+		var o_starostina_vocation = "Projects Lead"
+		var l_gleizer = "Lev&nbsp;<br>Gleizer"
+		var l_gleizer_vocation = "CIO"
+		var m_zotov = "Mikhail&nbsp;<br>Zotov"
+		var m_zotov_vocation = "Commercial Director"
 
-		var footer_contacts = "GET IN TOUCH"
-		var footer_facebook = "Subscribe"
+		var footer_contacts = "STAY IN TOUCH!"
+		var footer_facebook = "Follow us on Facebook"
