--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block vars
 	- 
-		var lang = "ru"
+		var ms_lang = "ru"
 		var path = ""
 		var ms_title = "Клиентская Конференция Mediascope 2020"
 		var ms_heading = "Mediascope Clients<br>Conference "
@@ -11,6 +11,7 @@ block vars
 		var ms_nav_item3 = "Программа"
 		var ms_nav_item4_url = "en/index.html"
 		var ms_nav_item4 = "ENG"
+		var ms_nav_item5 = "Архив конференций"
 		var ms_btn_join = "Регистрация"
 		var ms_btn_manual = "Где и как смотреть трансляцию"
 		var ms_about_title = "О конференции"
@@ -18,10 +19,11 @@ block vars
 		var broadcast_info = "Трансляция будет проходить одновременно на нескольких площадках."
 		var broadcast_site = "Сайт конференции"
 		var broadcast_title = "Трансляция"
-		var broadcast_player_info = "Дискуссионная панель «Viewability: отрицание, гнев, торг, принятие… Где мы сегодня и что будет завтра?»"
 		var broadcast_player_select0 = "Выбрать плеер"
 		var broadcast_player_select1 = "Плеер 1"
 		var broadcast_player_select2 = "Плеер 2"
+		var broadcast_review = "Оценить спикеров"
+		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLScdv6PY9QpsafOz-atbsIqkr21OzdAi-SQ--2DdF6jao0Ad_A/viewform"
 
 		var r_tagiev = "Руслан&nbsp;<br>Тагиев"
 		var r_tagiev_vocation = "генеральный директор&nbsp;<br>Mediascope"
@@ -30,9 +32,9 @@ block vars
 		var m_pikuleva = "Марина&nbsp;<br>Пикулева"
 		var m_pikuleva_vocation = "директор по специальным&nbsp;<br>исследованиям Mediascope"
 		var o_starostina = "Олеся&nbsp;<br>Старостина"
-		var o_starostina_vocation = "старший менеджер&nbsp;<br>по специальным исследованиям"
+		var o_starostina_vocation = "руководитель&nbsp;<br>проектов Mediascope"
 		var l_gleizer = "Лев&nbsp;<br>Глейзер"
-		var l_gleizer_vocation = "директор по информационным&nbsp;<br>технологиям"
+		var l_gleizer_vocation = "директор по информационным&nbsp;<br>технологиям Mediascope"
 		var m_zotov = "Михаил&nbsp;<br>Зотов"
 		var m_zotov_vocation = "коммерческий директор&nbsp;<br>Mediascope"
 
