Registration to EN added

--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -12,7 +12,7 @@ block vars
 		var ms_nav_item4_url = "/index.html"
 		var ms_nav_item4 = "РУС"
 		var ms_nav_item5 = "Archive"
-		var ms_btn_join = "Регистрация"
+		var ms_btn_join = "Registration"
 		var ms_btn_manual = "Где и как смотреть трансляцию"
 		var ms_about_title = "About the conference"
 		var ms_about_text = "2020 has been a special year for everyone. The technological transformation has become a key strategic objective for majority of businesses in media and advertising market.</p><p>During this year we have done a lot to support you - our clients, in addressing the challenges of today and tomorrow.</p><p>We will be happy to share our ideas and vision with you at our annual Clients Conference which will be held online on 1 December 2020.</p><p>We invite you to register for our event and look forward to seeing you online on 1 December!"
