--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -10,14 +10,16 @@ block vars
 		var ms_nav_item2 = "Speakers"
 		var ms_nav_item3 = "Conference Agenda"
 		var ms_nav_item4_url = "/index.html"
-		var ms_nav_item4 = "РУС"
+		var ms_nav_item4 = "RUS"
 		var ms_nav_item5 = "Archive"
 		var ms_btn_join = "Registration"
-		var ms_btn_manual = "Где и как смотреть трансляцию"
+		var ms_btn_join_url = "//mediascopeconference.timepad.ru/event/1484488/"
+		var ms_btn_manual = "Conference Broadcast"
 		var ms_about_title = "About the conference"
 		var ms_about_text = "2020 has been a special year for everyone. The technological transformation has become a key strategic objective for majority of businesses in media and advertising market.</p><p>During this year we have done a lot to support you - our clients, in addressing the challenges of today and tomorrow.</p><p>We will be happy to share our ideas and vision with you at our annual Clients Conference which will be held online on 1 December 2020.</p><p>We invite you to register for our event and look forward to seeing you online on 1 December!"
-		var broadcast_info = "Трансляция будет проходить одновременно на нескольких площадках."
-		var broadcast_site = "Сайт конференции"
+		
+		var broadcast_info = "The conference broadcast will take place on this website on December 1, 2020 and will start at 11:00am Moscow time. See you soon!"
+		var broadcast_site = "Conference website"
 		var broadcast_title = "Broadcast"
 		var broadcast_player_select0 = "Media player"
 		var broadcast_player_select1 = "Media player 1"
@@ -26,17 +28,31 @@ block vars
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLSdIx30Q5zMmWtQKHZG55eM1FhRRv0VdDPZkAljXSXpirXSd9A/viewform"
 
 		var r_tagiev = "Ruslan&nbsp;<br>Tagiev"
-		var r_tagiev_vocation = "CEO"
+		var r_tagiev_vocation = "CEO Mediascope"
+		var r_tagiev_speech = "Welcome"
+
 		var k_achkasova = "Ksenia&nbsp;<br>Achkasova"
-		var k_achkasova_vocation = "COO"
+		var k_achkasova_vocation = "COO Mediascope"
+		var k_achkasova_speech = "Results 2020. Plans 2021"
+		var k_achkasova_details = "Media research development, hybrid approach and big data in research"
+
 		var m_pikuleva = "Marina&nbsp;<br>Pikuleva"
-		var m_pikuleva_vocation = "Custom Media&nbsp;<br>Research Director"
+		var m_pikuleva_vocation = "Custom Media&nbsp;<br>Research Director Mediascope"
+		var m_pikuleva_speech = "BrandPulse: one year later"
+		var m_pikuleva_details = "New opportunities for analyzing consumer markets"
 		var o_starostina = "Olesya&nbsp;<br>Starostina"
-		var o_starostina_vocation = "Projects Lead"
+		var o_starostina_vocation = "Projects Lead&nbsp;<br>Mediascope"
+
 		var l_gleizer = "Lev&nbsp;<br>Gleizer"
-		var l_gleizer_vocation = "CIO"
+		var l_gleizer_vocation = "CIO Mediascope"
+		var l_gleizer_speech = "Alpaca and Capybaras"
+		var l_gleizer_details = "How the production of heterogeneous data comes to a single model, and personalization becomes part of analytics"
+
 		var m_zotov = "Mikhail&nbsp;<br>Zotov"
-		var m_zotov_vocation = "Commercial Director"
+		var m_zotov_vocation = "Commercial Director Mediascope"
+		var m_zotov_speech = "The Ultimate Question …42!"
+		var m_zotov_details = "How the Mediascope's new technologies help Media to better understand the path, attention and actions of a person"
+
 
 		var footer_contacts = "STAY IN TOUCH!"
 		var footer_facebook = "Follow us on Facebook"
