--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,10 +13,12 @@ block vars
 		var ms_nav_item4 = "ENG"
 		var ms_nav_item5 = "Архив конференций"
 		var ms_btn_join = "Регистрация"
+		var ms_btn_join_url = "//mediascopeconference.timepad.ru/event/1477146/"
 		var ms_btn_manual = "Где и как смотреть трансляцию"
 		var ms_about_title = "О конференции"
 		var ms_about_text = "2020 год для всех особенный. Технологическая трансформация стала одной из стратегически важных составляющих для большинства компаний и бизнесов.</p><p>За этот год мы сделали многое для того, чтобы наши клиенты смогли в будущем строить свой бизнес и принимать решения на основе синтеза огромного опыта Mediascope в медиаисследованиях и лучших технологий в области работы с данными.</p><p>Мы будем рады подробнее рассказать об этом на нашей конференции 1 декабря <nobr>2020 года</nobr>.</p><p>В этом году наше мероприятие состоится в онлайн-формате. Посмотреть трансляцию вы сможете по предварительной регистрации.</p><p>До встречи 1 декабря!"
-		var broadcast_info = "Трансляция будет проходить одновременно на нескольких площадках."
+		
+		var broadcast_info = "Трансляция будет проходить одновременно на нескольких площадках, и вы можете выбрать наиболее удобную для Вас. 1 декабря в 11:00 стартует наш эфир. До встречи!"
 		var broadcast_site = "Сайт конференции"
 		var broadcast_title = "Трансляция"
 		var broadcast_player_select0 = "Выбрать плеер"
@@ -27,16 +29,29 @@ block vars
 
 		var r_tagiev = "Руслан&nbsp;<br>Тагиев"
 		var r_tagiev_vocation = "генеральный директор&nbsp;<br>Mediascope"
+		var r_tagiev_speech = "Приветственное слово"
+
 		var k_achkasova = "Ксения&nbsp;<br>Ачкасова"
 		var k_achkasova_vocation = "исполнительный директор&nbsp;<br>Mediascope"
+		var k_achkasova_speech = "Итоги 2020. Планы 2021"
+		var k_achkasova_details = "Развитие медиаизмерений, гибридные подходы и большие данные в исследованиях"
+
 		var m_pikuleva = "Марина&nbsp;<br>Пикулева"
 		var m_pikuleva_vocation = "директор по специальным&nbsp;<br>исследованиям Mediascope"
+		var m_pikuleva_speech = "BrandPulse: год спустя"
+		var m_pikuleva_details = "Новые возможности для анализа потребительских рынков"
 		var o_starostina = "Олеся&nbsp;<br>Старостина"
 		var o_starostina_vocation = "руководитель&nbsp;<br>проектов Mediascope"
+
 		var l_gleizer = "Лев&nbsp;<br>Глейзер"
 		var l_gleizer_vocation = "директор по информационным&nbsp;<br>технологиям Mediascope"
+		var l_gleizer_speech = "Альпака и капибары"
+		var l_gleizer_details = "Как производство разнородных данных приходит к единой модели, а персонализация становится частью аналитики"
+
 		var m_zotov = "Михаил&nbsp;<br>Зотов"
 		var m_zotov_vocation = "коммерческий директор&nbsp;<br>Mediascope"
+		var m_zotov_speech = "Главный вопрос…42!"
+		var m_zotov_details = "Как новые технологии Mediascope помогут медиа лучше изучить путь, внимание и действия человека"
 
 		var footer_contacts = "ОСТАВАЙТЕСЬ С НАМИ НА СВЯЗИ"
 		var footer_facebook = "Подпишись"
